--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,9 @@ jobs:
       - name: test
         run: yarn test
 
+      - name: build
+        run: yarn build
+
       - name: deploy
         run: |
           git config --global user.name starhacks
