--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-ga": "^3.3.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.3.4",
     "web-vitals": "^1.0.1"
   },
