--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,16 @@
         "react"
     ],
     "rules": {
-        "indent": ["error", 4]
+        "indent": [
+            "error",
+            4
+        ],
+        "object-curly-spacing": [
+            "error",
+            "always",
+            {
+                "arraysInObjects": false
+            }
+        ]
     }
 }
