--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "lint": "yarn run eslint --fix ./src/**/*.jsx",
+    "lint": "yarn run eslint --fix ./src/**/*.jsx ./src/*.js",
     "prepare": "husky install"
   },
   "eslintConfig": {
