--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.24.0",
     "gh-pages": "^3.2.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
